--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+     
 
-      - name: Use Node 12
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
+      uses: bervProject/railway-deploy@main
+      with:
+      railway_token: ${{ secrets.RAILWAY_TOKEN }}
+      service: "my-service"
 
       - name: Install packages
         run: yarn install --frozen-lockfile
